# scry-2

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  README.md  TODO.md  docker-compose.yml  mix.exs  plans.md
.claude/commands/: design-audit.md  docs-audit.md  engineering-audit.md  (+2 more)
.serena/: project.yml
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
decisions/: README.md
defaults/: scry-2-dev.service  scry-2.desktop  scry-2.service  scry_2.desktop  scry_2.service  scry_2.toml
docs/: development.md  dual-name-cards-campaign.md  storage-split-campaign.md
installer/: install.sh
lib/: scry_2.ex  scry_2_web.ex
native/scry2_collection_reader/: Cargo.toml
native/scry2_collection_reader/offsets_probe/: .gitignore  README.md  dump.c
native/scry2_collection_reader/src/: discovery_cache.rs  lib.rs  linux.rs  macos.rs  read_budget.rs  walker.rs  windows.rs
native/scry2_collection_reader/src/walker/: account.rs  boosters.rs  build_hint.rs  card_holder.rs  card_layout_data.rs  chain.rs  class_lookup.rs  cosmetics.rs  dict.rs  dict_kv.rs  domain.rs  environment.rs  event_manager.rs  field.rs  image_lookup.rs  instance_field.rs  inventory.rs  limits.rs  list_t.rs  mastery.rs  match_info.rs  match_scene.rs  mono.rs  mono_array.rs  object.rs  pe.rs  prologue.rs  run.rs  test_support.rs  vtable.rs
plans/: 001-cards-page-redesign.md
rel/: env.bat.eex
scripts/: deploy  healthcheck  install  install-dev  install-linux  install-macos  release  release-status  tag-release  uninstall  uninstall-linux  uninstall-macos
specs/: 2026-04-20-elixir-self-update-design.md  2026-04-20-elixir-self-update-plan.md  2026-05-03-chain-2-board-state-design.md  2026-05-03-memory-observation-match-enrichment-design.md
test/: test_helper.exs
tray/: .gitignore  apply_lock.go  apply_lock_test.go  autostart_darwin.go  autostart_darwin_test.go  autostart_linux.go  autostart_linux_test.go  autostart_windows.go  autostart_windows_test.go  backend.go  backend_notwindows.go  backend_test.go  backend_windows.go  browser_darwin.go  browser_darwin_test.go  browser_linux.go  browser_linux_test.go  browser_windows.go  browser_windows_test.go  dashboard.go  data_dir_darwin.go  data_dir_linux.go  data_dir_windows.go  first_run.go  gen_icon.go  go.mod  go.sum  main.go  notify_darwin.go  notify_linux.go  notify_windows.go  systray_menu_item.go
(+1127 files in other folders)
