[package]
name = "scry2_collection_reader"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "scry2_collection_reader"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "match-manager-spike"
path = "src/bin/match_manager_spike.rs"
required-features = []

[dependencies]
rustler = "0.37"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
